--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
                     <img class="invert" src="playlist.svg" alt="">
                     <h2>Your Library</h2>
                 </div>
+                <div class="songlist">
+                    <ul>
+                        
+                    </ul>
+                </div>
                 <div class="footer">
                     <div><a href="https://www.spotify.com/jp/legal/"><span>Legal</span></a></div>
                     <div><a href="https://www.spotify.com/jp/privacy/"><span>Privacy Center</span></a></div>
