--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="spotify-playlists">
                 <h1>Spotify playlists</h1>
                 <div class="cardContainer">
-                    <div class="card">
+                    <div data-folder="oldsong" class="card">
                         <div class="play">
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -81,7 +81,7 @@
                         <h2>Happy Hits</h2>
                         <p>Hits to boost your mood and fill you with happiness</p>
                     </div>
-                    <div class="card">
+                    <div data-folder="newhits" class="card">
                         <div class="play">
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
